--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": "v14"
+    "node": "v16"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "discord.js": "^13.0.1",
+    "node": "^16.6.1"
+  }
 }
