🌹🐩 Checkpoint ./index.js:25920309/12011 ./ardademrbotunkalbi/komut.js:25920309/3787 ./package.json:25920309/684 ./ardademrkomutlar/arda.js:25920309/1827

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/rest": "^0.1.0-canary.0",
+    "ascii-table": "^0.0.9",
     "discord.js": "^13.0.1",
     "node": "^16.6.1"
   }
