🎀🎡 Checkpoint ./config.json:29130802/85

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "prefix" : "PREFIX BURAYA",
-  "token" : "TOKEN BURAYA"
+  "prefix" : "!",
+  "token" : "ODQ1NDI4MDIyMTgxMzYzNzMz.YKg0Mw.TF8XDSYmL0-y_Me72DGtxISiqcM"
 }
