--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "prefix" : "!",
-  "token" : "ODQ1NDI4MDIyMTgxMzYzNzMz.YKg0Mw.TF8XDSYmL0-y_Me72DGtxISiqcM"
+  "prefix" : "PREFIX",
+  "token" : "TOKEN"
 }
