🏚🍏 Checkpoint ./config.json:25915949/71 ./index.js:25915949/420 ./ardademrbotunkalbi/komut.js:25915949/440

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "prefix" : "PREFIX",
-  "token" : "TOKEN"
+  "prefix" : "!",
+  "token" : "OTM1OTE0Mzc0MDcyMjcwODc4.YfFkLw.tuGYthfr1_vnTQBa1xSv0gLkffI"
 }
